# punt-engine

./: .gitattributes  .gitignore  README.md  flake.nix
.github/workflows/: ci.yml
.nvim/svlangserver/: index.json  linter.vc
cores/pipelined_order_book/: pipelined-order-book.cabal
docs/: .gitignore  flake.nix
docs/content/: index.md
docs/content/notes/: the-architecture-of-a-pipelined-order-book.md  the-intuition-behind-moving-avg-accumulator.md
docs/public/: index.html  index.xml  sitemap.xml
docs/public/notes/: contributing-to-the-docs-site.html  index.html  moving-average-accumulator.html  the-architecture-of-a-pipelined-order-book.html  the-intuition-behind-moving-avg-accumulator.html  the-punt-engine-system.html
docs/public/static/: contentIndex.json
docs/public/tags/: index.html
docs/quartz/.quartz-cache/: transpiled-build.mjs  transpiled-build.mjs.map
hashtbl/: CHANGELOG.md  hashtbl.cabal
hashtbl/src/: README.md  punt-engine-haskell-cores.cabal
hashtbl/src/src/HashTable/: Top.hs
hdl/sv/moving_average_accumulator/: tb.cpp
hdl/sv/moving_average_accumulator/obj_dir/: Vmoving_average_accumulator  Vmoving_average_accumulator.cpp  Vmoving_average_accumulator.h  Vmoving_average_accumulator.mk  Vmoving_average_accumulator__ALL.cpp  Vmoving_average_accumulator__ALL.d  Vmoving_average_accumulator__Dpi.cpp  Vmoving_average_accumulator__Dpi.h  Vmoving_average_accumulator__Syms.cpp  tb.d  (+17 more)
include/: constant.hpp
itch_streamgen/: CMakeLists.txt  README.md  flake.nix
itch_streamgen/.cache/clangd/index/: constant.hpp.398291ED90E172A4.idx  generator.cpp.6BB5B105E456784B.idx  main.cpp.167AE799200CE3D5.idx  message.hpp.7B12C8DE681C06BD.idx  tautology_test.cpp.FB4186F632B53099.idx
itch_streamgen/include/: constant.hpp  message.hpp
itch_streamgen/src/: CMakeLists.txt  generator.cpp
itch_streamgen/src/itch/: constants.zig
itch_streamgen/tests/: CMakeLists.txt
madlib/: LICENSE.md
pipebomb/: .gitignore  Makefile
pipebomb/rtl/: accumulators.sv  match_stub.sv  msg_decode.sv  msg_fifo.sv  orderbook_pkg.sv  pipebomb_pkg.sv  pipebomb_top.sv  price_cache_sorted.sv  router_ordermap.sv  side_processor.sv
pipebomb/tb/: tb_pipebomb.cpp  tb_pipebomb_cross.cpp
vivado/: punt-engine.xpr
vivado/scripts/: create_project.tcl
